--- a/cer/index.html
+++ b/cer/index.html
@@ -8,8 +8,10 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="./src/assets/SoloLogo.svg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="" />
     <title>CER</title>
   </head>
   <body>
